<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Andro FTP HD</string>
    <string name="app_settings_name">Settings</string>
    <string name="loading">Loading…</string>
    <string name="pending">Pending…</string>

    <!-- Connect progress dialog -->
    <string name="connecting_dialog_title">Connection</string>
    <string name="connecting_dialog_message">Connecting to %s&#8230;</string>

    <!-- Default values -->
    <string name="default_port">21</string>

    <!-- Server Manager -->
    <string name="server_manager_title_my_servers">My Servers</string>
    <string name="server_manager_title_server_details">Server details</string>
    <string name="server_manager_label_select_server">Servers</string>
    <string name="server_manager_label_new_server">New server</string>
    <string name="server_manager_label_name">Name</string>
    <string name="server_manager_label_host">Host</string>
    <string name="server_manager_label_port">Port</string>
    <string name="server_manager_label_logontype">Logontype</string>
    <string name="server_manager_label_logontype_anonymous">Anonymous</string>
    <string name="server_manager_label_logontype_normal">Normal</string>
    <string name="server_manager_label_username">Username</string>
    <string name="server_manager_label_password">Password</string>
    <string name="server_manager_button_connect">Connect</string>
    <string name="server_manager_button_newserver">New server</string>
    <string name="server_manager_button_delete">Delete</string>
    <string name="server_manager_button_save">Save</string>
    <string name="server_manager_button_cancel">Cancel</string>
    <string name="server_manager_hint_name">Required server name</string>
    <string name="server_manager_hint_host">Required server host</string>
    <string name="server_manager_hint_port">21</string>
    <string name="server_manager_hint_username">Required username</string>
    <string name="server_manager_error_name_required">Server name is required</string>
    <string name="server_manager_error_host_required">Server host is required</string>
    <string name="server_manager_error_username_required">Server username is required</string>
    <string name="server_manager_error_password_required">Server password is required</string>

    <!-- Main window -->
    <string name="main_tab_local">Local</string>
    <string name="main_tab_server">Server</string>
    <string name="main_tab_transfers">Transfers</string>
    <string name="main_tab_console">Console</string>

    <!-- Menus -->
    <string name="menu_upload">Upload</string>
    <string name="menu_download">Download</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_newfolder">New folder</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_detail">Detail</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_settings">Settings</string>
    <!-- Transfer fragment -->
    <string name="transfer_label_source">Source</string>
    <string name="transfer_label_destination">Destination</string>
    <string name="transfer_label_size">Size</string>
    <string name="transfer_label_progress">Progress</string>

    <!-- Messages -->
    <string name="msg_1_element_selected">1 element selected</string>
    <string name="msg_n_element_selected">%d elements selected</string>

    <!-- Error messages -->
    <string name="err_file_already_exists">File already exists</string>
    <string name="err_rename_file">Unknown error renaming file</string>
    <string name="err_folder_already_exists">Folder already exists</string>
    <string name="err_create_folder">Unknown error creating folder</string>
    <string name="err_delete_file">Error delete folder</string>
    <string name="err_value_must_be_integer">Value must be an integer</string>
    <string name="err_value_must_be_integer_between_1_5">Value must be an integer between 1 and 5</string>

    <!-- File type description -->
    <string name="file_type_format_folder">Folder</string>
    <string name="file_type_format_unknown">Unknown</string>

    <!--  -->
    <string name="file_icon_content_description">File icon</string>
    <string name="go_parent_content_description">Go parent</string>

</resources>