<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:background="@drawable/header_bkgnd"
        android:orientation="horizontal"
        android:padding="10dip" >

        <CheckBox
            android:id="@+id/select_all"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="40dip"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:text="@string/transfer_label_source" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/transfer_label_destination" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/transfer_label_size" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/transfer_label_progress" />
    </LinearLayout>

    <ListView
        android:id="@+id/transfers"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>